--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <title>JN Alvarez | Desarrollo Web & Software</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Desarrollo web y software a medida. Sitios modernos, rápidos y pensados para vender.">
+  <meta name="description" content="JN Alvarez - Desarrollo web moderno, software a medida y soluciones digitales que generan resultados.">
 
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
 <header class="navbar">
   <div class="container nav-content">
-    <h1 class="logo">JN<span>DEV</span></h1>
+    <div class="logo">JN<span>Alvarez</span></div>
     <nav>
       <a href="#servicios">Servicios</a>
       <a href="#proyectos">Proyectos</a>
@@ -28,72 +28,57 @@
 
 <section class="hero">
   <div class="container hero-content">
-    <div>
-      <h2>Código <span>sin límites</span></h2>
-      <p>Desarrollamos soluciones digitales modernas que convierten ideas en resultados reales.</p>
-      <a href="#contacto" class="btn primary">Empezar ahora</a>
-    </div>
-    <div class="hero-img">
-      <!-- Imagen futura -->
-    </div>
+    <h1>Código que <span>impacta</span></h1>
+    <p>Diseñamos experiencias digitales modernas que convierten ideas en resultados reales.</p>
+    <a href="#contacto" class="btn glow">Empezar proyecto</a>
   </div>
 </section>
 
 <section id="servicios" class="section">
-  <div class="container">
-    <h3>Servicios</h3>
-    <div class="cards">
-      <div class="card">
-        <h4>Web Profesional</h4>
-        <p>Sitios rápidos, modernos y optimizados para vender.</p>
-      </div>
-      <div class="card">
-        <h4>Software a Medida</h4>
-        <p>Sistemas personalizados según tu necesidad.</p>
-      </div>
-      <div class="card">
-        <h4>SEO & Optimización</h4>
-        <p>Posicionamos tu marca en Google.</p>
-      </div>
+  <h2>Servicios</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>Web Profesional</h3>
+      <p>Sitios modernos, rápidos y optimizados para vender.</p>
+    </div>
+    <div class="card">
+      <h3>Software a Medida</h3>
+      <p>Sistemas personalizados según tus necesidades reales.</p>
+    </div>
+    <div class="card">
+      <h3>SEO & Performance</h3>
+      <p>Posicionamiento, velocidad y conversión.</p>
     </div>
   </div>
 </section>
 
-<section id="proyectos" class="section dark">
-  <div class="container">
-    <h3>Proyectos</h3>
-    <div class="projects">
-      <div class="project">Proyecto 1</div>
-      <div class="project">Proyecto 2</div>
-    </div>
-  </div>
+<section id="proyectos" class="section alt">
+  <h2>Proyectos</h2>
+  <p class="muted">Próximamente casos reales con impacto.</p>
 </section>
 
 <section id="nosotros" class="section">
-  <div class="container">
-    <h3>Sobre nosotros</h3>
-    <p>
-      Somos desarrolladores de San Juan, Argentina.  
-      Creamos soluciones digitales enfocadas en rendimiento, diseño y crecimiento.
-    </p>
-  </div>
+  <h2>Sobre Nosotros</h2>
+  <p class="center">
+    Somos desarrolladores enfocados en crear soluciones digitales limpias,
+    escalables y pensadas para crecer.
+  </p>
 </section>
 
-<section id="contacto" class="section dark">
-  <div class="container">
-    <h3>Contacto</h3>
-    <form class="contact-form">
-      <input type="text" placeholder="Nombre">
-      <input type="email" placeholder="Email">
-      <textarea placeholder="Contanos tu idea"></textarea>
-      <button class="btn primary">Enviar mensaje</button>
-    </form>
-  </div>
+<section id="contacto" class="section alt">
+  <h2>Contacto</h2>
+  <form class="contact-form">
+    <input type="text" placeholder="Nombre" required>
+    <input type="email" placeholder="Email" required>
+    <textarea placeholder="Contanos tu idea"></textarea>
+    <button type="submit" class="btn glow">Enviar mensaje</button>
+  </form>
 </section>
 
 <footer>
-  <p>© 2026 JN Alvarez — Desarrollo Web</p>
+  © 2026 JN Alvarez · Desarrollo Web & Software
 </footer>
 
 </body>
 </html>
+
